--- a/monitor-server/src/main/resources/application-dev.yml
+++ b/monitor-server/src/main/resources/application-dev.yml
@@ -21,7 +21,7 @@ spring:
     password: admin
     virtual-host: /
   datasource:
-    url: jdbc:mysql://localhost:3306/test
+    url: jdbc:mysql://localhost:3306/monitor
     username: root
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
