--- a/monitor-server/src/main/resources/application-dev.yml
+++ b/monitor-server/src/main/resources/application-dev.yml
@@ -4,6 +4,10 @@ springdoc:
   swagger-ui:
     operations-sorter: alpha
 spring:
+  influx:
+    url: http://localhost:8086
+    user: admin
+    password: Aa123456
   mail:
     host: smtp.163.com
     username: YiXiMi2025@163.com
