--- a/monitor-web/package.json
+++ b/monitor-web/package.json
@@ -14,6 +14,7 @@
     "@vueuse/core": "^13.1.0",
     "axios": "^1.8.4",
     "element-plus": "^2.9.7",
+    "flag-icon-css": "^4.1.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
