--- a/monitor-web/package.json
+++ b/monitor-web/package.json
@@ -13,6 +13,7 @@
     "@vue/compiler-sfc": "^3.5.13",
     "@vueuse/core": "^13.1.0",
     "axios": "^1.8.4",
+    "echarts": "^6.0.0",
     "element-plus": "^2.9.7",
     "flag-icon-css": "^4.1.7",
     "vue": "^3.5.13",
