--- a/monitor-web/package.json
+++ b/monitor-web/package.json
@@ -16,6 +16,8 @@
     "echarts": "^6.0.0",
     "element-plus": "^2.9.7",
     "flag-icon-css": "^4.1.7",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
