--- a/monitor-web/package.json
+++ b/monitor-web/package.json
@@ -19,7 +19,9 @@
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "xterm": "^5.3.0",
+    "xterm-addon-attach": "^0.9.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
